# circular

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
.github/workflows/: codeql.yml
cmake/: GitHash.cmake  SourceLists.cmake.template  SourceLists.official.cmake  version.h.in
include/circular/: config_map.hpp  grid.hpp  lib.hpp  model.hpp  tasker.hpp  world.hpp
scripts/: build.sh  build_and_test.sh  get_source_files.sh  integration_test.sh  mint.sh
src/: CMakeLists.txt  lib.cpp
src/dyn/: config_map.cpp  config_map.hpp
src/model/: model.cpp
src/stat/: config_map.cpp  constants.hpp  parameter.hpp  planets.cpp  planets.hpp  trick_math.hpp  world.cpp  world.hpp
src/tasker/: tasker.cpp
tests/: CMakeLists.txt  config_map.cpp  grid.cpp  model.cpp  parameter.cpp  tasker.cpp  test.cpp  world.cpp
tests/fixtures/: bad.toml  good.toml  venus.toml
